--- a/.github/workflows/swift.yaml
+++ b/.github/workflows/swift.yaml
@@ -12,7 +12,7 @@ jobs:
     
     strategy:
       matrix:
-        os: [´ubuntu-latest]
+        os: [ubuntu-latest]
         swift-version: ["5.7"]
     
     runs-on: ${{ matrix.os }}
